# taces

./: CLAUDE.md  IMPLEMENTATION_STATUS.md  Makefile  README.md  TEST_STATUS_REPORT.md  docker-compose.yml  test-ci-locally.sh  功能完成状态报告.md  功能差异分析报告.md  实施计划.md  开发历史记录.md
backend/: .env  .env.example  .sqlxrc  API_DOCS_CIRCLE_POST.md  API_DOCS_FILE_UPLOAD.md  API_DOCS_PAYMENT.md  API_DOCS_TEMPLATE.md  API_DOCS_VIDEO_CONSULTATION.md  Cargo.toml  DATABASE_SCHEMA.md  DOCUMENTATION_INDEX.md  PAYMENT_SETUP.md  PROJECT_STATUS.md  README.md  TESTING.md  run-tests.sh  run_tests.sh  test_debug.rs
backend/migrations/: 20240101000001_create_initial_tables.sql.bak  20240102000001_create_departments_table.sql  20240102000002_create_patient_groups_tables.sql  20240102000003_create_patient_profiles_table.sql  20240103000001_create_content_tables.sql  20240104000001_create_circle_tables.sql  20240105000001_create_templates_tables.sql  20240106000001_create_review_tables.sql  20240119_create_notifications.sql  20240120_create_payment_tables.sql  20240121_create_video_consultation_tables.sql
backend/src/: lib.rs  main.rs
backend/src/config/: database.rs  mod.rs  redis.rs  storage.rs
backend/src/controllers/: appointment_controller.rs  auth_controller.rs  circle_controller.rs  circle_post_controller.rs  content_controller.rs  department_controller.rs  doctor_controller.rs  file_upload_controller.rs  file_upload_controller_enhanced.rs  live_stream_controller.rs  mod.rs  notification_controller.rs  patient_group_controller.rs  patient_profile_controller.rs  payment_controller.rs  prescription_controller.rs  review_controller.rs  statistics_controller.rs  template_controller.rs  user_controller.rs  video_consultation_controller.rs
backend/src/middleware/: auth.rs  auth_cached.rs  jwt_config.rs  mod.rs
backend/src/models/: appointment.rs  circle.rs  circle_post.rs  content.rs  department.rs  doctor.rs  file_upload.rs  live_stream.rs  mod.rs  notification.rs  patient_group.rs  patient_profile.rs  payment.rs  prescription.rs  review.rs  statistics.rs  template.rs  user.rs  video_consultation.rs
backend/src/routes/: appointment.rs  auth.rs  circle.rs  circle_post.rs  content.rs  department.rs  doctor.rs  file_upload.rs  live_stream.rs  mod.rs  notification.rs  patient_group.rs  patient_profile.rs  payment.rs  prescription.rs  review.rs  statistics.rs  template.rs  user.rs  video_consultation.rs  websocket.rs
backend/src/services/: alipay_service.rs  alipay_service.rs.bak  appointment_service.rs  auth_service.rs  auth_service_cached.rs  cache_service.rs  circle_post_service.rs  circle_service.rs  content_service.rs  department_service.rs  department_service_cached.rs  doctor_service.rs  email_service.rs  file_storage_service.rs  file_upload_service.rs  live_stream_service.rs  mod.rs  notification_service.rs  notification_service_enhanced.rs  patient_group_service.rs  patient_profile_service.rs  payment_service.rs  prescription_service.rs  push_notification_service.rs  review_service.rs  session_service.rs  sms_service.rs  statistics_service.rs  template_service.rs  user_service.rs  user_service_cached.rs  video_consultation_service.rs  websocket_service.rs  wechat_pay_service.rs
backend/src/utils/: errors.rs  jwt.rs  mod.rs  test_helpers.rs
backend/tests/: integration_tests.rs  unit_tests.rs
backend/tests/common/: mod.rs
backend/tests/integration/: mod.rs  test_appointment.rs  test_auth.rs  test_circle.rs  (+21 more)
(+6 files in other folders)
