[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "test_debug"
path = "test_debug.rs"


[lib]
name = "backend"
path = "src/lib.rs"


[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "mysql",
    "migrate",
    "chrono",
    "json",
    "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Random
rand = "0.8"

# Decimal for monetary values
rust_decimal = { version = "1.35", features = ["serde-float"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "json"] }

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util", "timeout"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
