[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "test_debug"
path = "test_debug.rs"


[lib]
name = "backend"
path = "src/lib.rs"


[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "mysql",
    "migrate",
    "macros",
    "chrono",
    "json",
    "rust_decimal",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Random
rand = "0.8"

# Decimal for monetary values
rust_decimal = { version = "1.35", features = ["serde-float"] }

# Redis for caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "json"] }

# WebSocket for real-time communication
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Cloud storage
aws-config = "1.0"
aws-sdk-s3 = "1.0"

# Payment integrations
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
md-5 = "0.10"
regex = "1.10"
rsa = { version = "0.9", features = ["pem"] }
urlencoding = "2.1"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
handlebars = "5.0"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util", "timeout"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
